  Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x

AntPublisher:
----------------------
* Submitted by Robert Smith

buildresults.xsl:
----------------------
* Added consolidated xsl to make transform more efficent (CC-115). Patch by Alban Peignier with updates by Hack Kampbjorn

contrib:
----------------------
* added build.xml for XmlLoggerWithStatus, minor change to readme. Patch by Brad Clarke
* cruiseTray:  can change properties at runtime, refresh manually and make a config file to store settings. (And new icons!) Patch by Ali Eyertas
* edit wrapper.template.conf for NtServiceWrapper to add javax.management.builder.initial property

CMSynergy:
----------------------
* add support for CM Synergy as a sourcecontrol and bootstrapper. Patch by Robert Smith

cruisecontrol.sh:
----------------------
* handle path conversion under cygwin. Patch by John Woodward

CVSBootstrapper:
----------------------
* add resetStickyTags attribute

errors.xsl:
----------------------
* Added errors.xsl to replace compile.xsl. Similar logic, but shows errors and warnings from all tasks.

FileServlet:
----------------------
* Added missing quotes around href attribute, which caused problems for filenames that contain spaces

HTMLEmailPublisher:
----------------------
* add xslFileList attribute as a mechanism to customize the list of .xsl files used. Patch by Peter Buckner

JabberPublisher:
----------------------
* Add 1 second sleep so multiple jabber publishers work. (CC-119) Patch by Fleur Kelpin

javadoc.xsl:
----------------------
* Improve formatting of Javadoc warnings. Patch by Dan Penhurst

JDOM support:
----------------------
* Upgraded from version b9 to version 1.0

JMX interface:
----------------------
* Fixed bug where pausing a project would keep all projects from building.

Log(Test):
----------------------
* Small patch (CC-121) for new JDOM version by Mark Doliner

manifest.mf:
----------------------